--- a/backends/backend-glfw/extern/glfw-2.7.3/lib/cocoa/Makefile.cocoa
+++ b/backends/backend-glfw/extern/glfw-2.7.3/lib/cocoa/Makefile.cocoa
@@ -14,7 +14,7 @@ PREFIX ?= /usr/local
 ##########################################################################
 # Default: Build GLFW static and shared library
 ##########################################################################
-all: libglfw.a libglfw.dylib
+all: libglfw.a
 
 
 ##########################################################################
