--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj
@@ -51,13 +51,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\..\gdx\include;..\..\..\..\backends\backend-glfw\exp;..\..\..\..\backends\gdx-backend-wogl\exp;..\..\..\..\backends\backend-glfw\extern\glfw-2.7.3\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\..\gdx\include;..\..\..\..\backends\backend-glfw\exp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>gdx.lib;backend-glfw.lib;gdx-backend-wogl.lib;opengl32.lib;glu32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gdx.lib;backend-glfw.lib;opengl32.lib;glu32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>xcopy /i /y ..\data $(OutDir)\data</Command>
@@ -72,14 +72,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\..\gdx\include;..\..\..\..\backends\backend-glfw\exp;..\..\..\..\backends\gdx-backend-wogl\exp;..\..\..\..\backends\backend-glfw\extern\glfw-2.7.3\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\..\gdx\include;..\..\..\..\backends\backend-glfw\exp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>gdx.lib;backend-glfw.lib;gdx-backend-wogl.lib;opengl32.lib;glu32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gdx.lib;backend-glfw.lib;opengl32.lib;glu32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
     <CustomBuildStep>
